# TFG---Face-expression-recognition

./: .gitignore  .gitmodules  OpenCVApps.cpp  OpenCVApps.h  TFG - Face recognition.sln  TFG - Face recognition.vcxproj  TFG - Face recognition.vcxproj.filters  Tutorial.cpp  Tutorial.h  clean.sh  configuration.sh  createsamples.bat  expresion.cpp  expresion.h  gnuplot_commands  labels.txt  main.cpp  parselog.sh  run.sh  traincascade.bat  utilidades.cpp  utilidades.h
apps/: STASM.sh  STASM_cars.sh  STASM_hands.sh  asmlib-opencv.sh  build.sh  dataPreprocessing.sh  detectarCara.sh  detectarCoches.sh  detectarManos.sh  detectarManosSimplificado.sh  douglasPeucker.sh  funciones.sh  iris_libSVM.sh  simplificacionSTASM.sh  vis_finetune.py
apps/DIGITS/: create_KDEFDB.sh  create_YalefacesDB.sh
caffe-master/custom/: Caffe_Convnet_ConfuxionMatrix.py  readme.md
data/: haarcascade_carsideview.xml  info.sh  yalefaces.sh
data/clasificador_centerlight/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/clasificador_glasses/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
data/clasificador_happy/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
data/clasificador_leftlight/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/clasificador_noglasses/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/clasificador_normal/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/clasificador_rightlight/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
data/clasificador_sad/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/clasificador_sleepy/: cascade.xml  stage1.xml  stage2.xml
data/clasificador_surprised/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
data/clasificador_wink/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
data/nets/: ageNet_all.prototxt  ageNet_all_deploy.prototxt  ageNet_single.prototxt  ageNet_single_deploy.prototxt  caffeNet_all.prototxt  caffeNet_all_deploy.prototxt  caffeNet_single.prototxt  caffeNet_single_deploy.prototxt  kdef_all.prototxt  solver.prototxt  train_val.prototxt
lib/STASM/apps/: minimal2.cpp
lib/STASM/stasm/: stasm.h
lib/STASM_cars/stasm/: convshape.cpp  landmarks.h  shape17.cpp  stasm_lib.h
lib/STASM_cars/stasm/MOD_1/: facedet.cpp  initasm.cpp
lib/STASM_cars/stasm/MOD_1/mh/: yaw00.mh  yaw00_lev0_p00_classic.mh  yaw00_lev0_p01_classic.mh  yaw00_lev0_p02_classic.mh  yaw00_lev0_p03_classic.mh  yaw00_lev0_p04_classic.mh  yaw00_lev0_p05_classic.mh  yaw00_lev0_p06_classic.mh  yaw00_lev0_p07_classic.mh  yaw00_lev0_p08_classic.mh  yaw00_lev0_p09_classic.mh  yaw00_lev0_p10_classic.mh  yaw00_lev0_p11_classic.mh  yaw00_lev0_p12_classic.mh  yaw00_lev0_p13_classic.mh  yaw00_lev0_p14_classic.mh  yaw00_lev0_p15_classic.mh  yaw00_lev0_p16_classic.mh  yaw00_lev0_p17_classic.mh  yaw00_lev0_p18_classic.mh  yaw00_lev0_p19_classic.mh  yaw00_lev0_p20_classic.mh  yaw00_lev0_p21_classic.mh  yaw00_lev0_p22_classic.mh  yaw00_lev0_p23_classic.mh  yaw00_lev0_p24_classic.mh  yaw00_lev0_p25_classic.mh  yaw00_lev0_p26_classic.mh  yaw00_lev0_p27_classic.mh  yaw00_lev1_p00_classic.mh  yaw00_lev1_p01_classic.mh  yaw00_lev1_p02_classic.mh  yaw00_lev1_p03_classic.mh  yaw00_lev1_p04_classic.mh  yaw00_lev1_p05_classic.mh  yaw00_lev1_p06_classic.mh  yaw00_lev1_p07_classic.mh  yaw00_lev1_p08_classic.mh  yaw00_lev1_p09_classic.mh  yaw00_lev1_p10_classic.mh  (+74 more)
lib/STASM_cars/tasm/landtab/: landtab_cars20.h  landtab_cars28.h  landtab_cars30.h
lib/STASM_cars/tasm/shapes/: cars.shape  cars1.shape  cars2.shape
lib/STASM_cars/tasm/src/: tasmconf.h
lib/STASM_hands/apps/: minimal.cpp
lib/STASM_hands/stasm/: landmarks.h  stasm.h  stasm_lib.h
lib/STASM_hands/stasm/MOD_1/log/: facedet.shape
lib/STASM_hands/stasm/MOD_1/mh/: yaw00.mh  yaw00_lev0_p00_classic.mh  yaw00_lev0_p01_classic.mh  yaw00_lev0_p02_classic.mh  yaw00_lev0_p03_classic.mh  yaw00_lev0_p04_classic.mh  yaw00_lev0_p05_classic.mh  yaw00_lev0_p06_classic.mh  yaw00_lev0_p07_classic.mh  yaw00_lev0_p08_classic.mh  yaw00_lev0_p09_classic.mh  yaw00_lev0_p10_classic.mh  yaw00_lev0_p11_classic.mh  yaw00_lev0_p12_classic.mh  yaw00_lev0_p13_classic.mh  yaw00_lev0_p14_classic.mh  (+210 more)
lib/STASM_hands/tasm/src/: tasmconf.h
lib/STASM_handsSimplificado/stasm/: stasm_lib.h
lib/STASM_handsSimplificado/stasm/MOD_1/: facedet.cpp  initasm.cpp
lib/STASM_handsSimplificado/tasm/landtab/: landtab_hands.h
lib/STASM_handsSimplificado/tasm/shapes/: hands.shape  hands_simplificado.shape
lib/asmlib-opencv-master/src/lib/: asmmodel.h  modelfile.h  modelimage.h  shapemodel.cpp  shapemodel.h  shapevec.h  similaritytrans.h
res/CarData/: entrenar
res/Hands/: readme.txt
res/Hands/shapes/: shapes_readme.txt
samples/background_samples/: bg_centerlight.txt  bg_glasses.txt  bg_happy.txt  bg_leftlight.txt  bg_noglasses.txt  bg_rightlight.txt  bg_sad.txt  bg_sleepy.txt  bg_surprised.txt  bg_wink.txt  normal.txt
samples/positive_samples/: centerlight.info  glasses.info  happy.info  leftlight.info  noglasses.info  normal.info  rightlight.info  sad.info  sleepy.info  surprised.info  wink.info
test/dataPreprocessing/: CMakeLists.txt  main.cpp
test/dataPreprocessing/inc/: expresion.h  infoBaseDatos.h  subject.h  utilidades.h
test/dataPreprocessing/src/: infoBaseDatos.cpp  main.cpp  subject.cpp  trainingSetup.cpp  utilidades.cpp  yalefaces.cpp
test/detectarCara/: CMakeLists.txt  main.cpp
test/detectarCoches/: CMakeLists.txt  main.cpp
test/detectarManos/: CMakeLists.txt  main.cpp
test/detectarManosSimplificado/: CMakeLists.txt  main.cpp
test/douglasPeucker/: CMakeLists.txt  main.cpp
test/ejemploCaffe/: CMakeLists.txt  main.cpp
test/iris_libSVM/: CMakeLists.txt  main.cpp
test/simplificacionSTASM/: CMakeLists.txt  README.md
test/simplificacionSTASM/inc/: douglasPeucker.h
test/simplificacionSTASM/src/: douglasPeucker.cpp  main.cpp
vec_files/: centerlight.vec  glasses.vec  happy.vec  leftlight.vec  noglasses.vec  normal.vec  rightlight.vec  sad.vec  sleepy.vec  surprised.vec  wink.vec
(+155 files in other folders)
