CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJ_NAME					"iris_libSVM"	)
SET(PROJ_PATH					${CMAKE_SOURCE_DIR}	)
SET(PROJ_OUT_PATH			${CMAKE_BINARY_DIR}	)
SET(PROJ_INCLUDES			"../../lib/libsvm-3.21/" )

FILE( GLOB_RECURSE PROJ_SOURCES main.cpp ../../lib/libsvm-3.21/svm.cpp )
FILE( GLOB_RECURSE PROJ_HEADERS ../../lib/libsvm-3.21/svm.h )

# Genero el ejecutable.
PROJECT( ${PROJ_NAME} )
INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
